Changes in 4.3:
- Add support for magnet links in the syndication plugin
- Add search line to download order dialog
- Add move top and bottom option to download order dialog (295341)
- Make sure that move up and move down in the download order dialog work with multiple items (295341)

Changes in 4.2:
- Add new group switcher combobox in toolbar (290888)
- Make kio-magnet optional
- Improve handing magnet uris in search plugin
- Fix bug causing kio-magnet to deselect all files
- Close current scan widget when a new one is started for a torrent (292001)
- Fix syndication plugin not handling relative urls properly
- Fix magnet uri's not being handled properly in load torrent feature of webinterface

Changes in 4.2rc1:
- Make it possible to check individual files of a torrent
- Data checks for multiple torrents can now get started at the same time (265611)
- Make links clickable in the status tab comments field (266089)
- Revamp UPnP plugin (266397)
- Fix bug making it possible to add conflicting items to the schedule (268879)
- Make it possible for schedule items to span multiple days (225939)
- Include disk usage of existing files when calculating bytes left after download in FileSelectDlg (267220)
- Disable scripts in GUI, if no interpreter could be found for the script (270226)
- Show shutdown plugin's config dialog when no rules are present and the enable button is pressed (271311)
- Make it possible to wait for several events before activating the shutdown action
- Fix wrong required diskspace calculation in some rare circumstances (271097)
- Revamp scanfolder plugin (263813, 271657)
- Revamp GUI of mediaplayer plugin
- Make properties extender a dialog (274356)
- Fix bug causing scripts not to be selectable in scripting plugin
- Show info hash in status tab
- Improve video streaming support
- Add Open With option to FileView context menu (279386)
- Fix bug causing views to not get properly restored when the application language changes (279588)